# multimodal-asr

./: .gitignore  README.md  asr.ipynb  audio.ipynb  audio_exp.ipynb  custom_asr.py  explore_audio.ipynb  pyproject.toml  requirements-lock.txt  requirements.txt  test.py
attria_app/web/: package-lock.json
jarvis/: __init__.py  config.py  main.py  runtime.py
jarvis/cognition/: llm.py  planner.py  router.py  tool_registry.py  verifier.py
jarvis/core/: events.py  graph.py  orchestrator.py  policy.py  state.py
jarvis/eval/: run_eval.py  scenarios.yaml
jarvis/mcp/: client.py  server.py
jarvis/memory/: store.py
jarvis/perception/: asr_offline.py  asr_stream.py  audio_io.py  pipeline.py  screen.py  vad.py  wake.py
jarvis/tools/: __init__.py  applescript.py  calendar_eventkit.py  docs_automation.py  mail_automation.py  system.py  visibility.py
jarvis/ui/: menubar.py
jarvis/voice/: duplex.py  tts.py  tts_inworld.py
ml/: custom_asr.py  explore_audio.ipynb  main.py
ml/1_detect/: mic_vad.py  microphone_vad.py
ml/2_asr_stt/: asr.ipynb
ml/3_llm/: colab_sync.py
ml/a_detect/: mic_vad.py
ml/b_asr/: asr_class.py  asr_model.ipynb
ml/c_llm/: agentic.py  applescript_basic.py  llama.py  llm.py  manual.py  ollama_llm.py
ml/d_agent/: agentic.py  llm.py  manual.py
prev-ml/: mcp.py
scripts/: download_models.sh  setup_macos_permissions.sh
src/: agent.py  lang_main.py  main_v1.py  mic_vad.py  tts.py
tests/: test_barge_in.py  test_cli.py  test_graph.py  test_mcp.py  test_orchestrator.py  test_planner.py  test_tools.py  test_verifier.py  test_wake.py
(+15 files in other folders)
