[project]
name = "jarvis-assistant"
version = "0.1.0"
description = "Local-first macOS voice assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "faster-whisper>=1.0",
    "torch>=2.0",
    "numpy>=1.26",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "silero-vad>=5.0",
    "pyobjc-framework-EventKit>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
    "rumps>=0.4",
    "fastmcp>=2.0",
    "mss>=9.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pynput>=1.7",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
parakeet = ["transformers>=4.40", "librosa>=0.10"]
gemini = ["google-genai>=1.0"]
inworld = ["requests>=2.31"]

[project.scripts]
jarvis = "jarvis.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jarvis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
